Wed Mar 04 23:58:43 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: add two more style strings to LinePlotDrawLine.
	  First "window" can set the window, with a "fit" being a fitting
	  window.  Also allow drawing of arrows by "arrow" followed by
	  "end", "both", "origin", "none" (done in canvas coordinates, not
	  screen coordinates, not ideal, try zooming)
	
	* src/graphing.c, src/funclib.c: a bit of cleanup, some pointless
	  optimizations, and make sure the graphing functions don't get
	  called during plotting.  Also setting LinePlotWindow,
	  SurfacePlotWindow will change zoom immediately as one would expect

	* help/C/gel-function-list.xml: update

Mon Mar 02 02:38:40 2009  Jiri (George) Lebl <jirka@5z.com>

	* **/Makefile.am: implement profile-generate and profile-use
	  target for profile guided optimization.  Not quite all working
	  I don't think, but simple tests produce impressive results.

	* gtkextra/gtkplotflux.c: fix bad use of snprintf

Mon Mar 02 02:07:52 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix bad drawing of very vertical functions.  Our
	  new hack in gtkextra handles lines way off screen more sanely so
	  we needent worry much here.

Fri Feb 27 14:42:12 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/mpwrap.[ch], src/funclib.c: remove the dependence on the MPF
	  compat layer.  Inline a few more functions.  Implement mpwl_eql
	  to make comparisons of rationals quicker.  Remove certain old
	  gmp/mpfr bug workarounds, a bit of cleanup

	* src/matop.c: in the mul_sub_row, cache the tmp variable for
	  greater speed.

Thu Feb 26 18:40:16 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: don't kill newlines in descriptions.  This is no longer
	  a problem.  Further reduces startup time by a tiny bit.

Thu Feb 26 02:34:54 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: fix crash of string dumping

Thu Feb 26 02:27:06 2009  Jiri (George) Lebl <jirka@5z.com>
