@@ -1,3 +1,12 @@
+Thu Mar 05 01:47:55 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: LinePlotDrawLegends parameter actually updates
+	  the legends drawing in real time.  Don't store the parameter value
+	  as an extra.
+
+	* src/graphing.c: always update spinboxes before plotting something
+	  not just on activate.
+
 Wed Mar 04 23:58:43 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: add two more style strings to LinePlotDrawLine.
